2012-09-22 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildFileConvertToUnix): Add missing
	slash to Perl regexp line.

2012-09-22 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::Install commands): Remove all
	import and repackage commands.
	(HELP::OPTIONAL EXTERNAL FILES::install.lst): Add ln summport.

	* bin/cygbuild.sh (CygbuildCommandMain): Remove all import and
	repackage commands
	(CygbuildDefineGlobalPerlVersion): Correct for Perl 5.14
	(CygbuildCmdInstallPatchVerify): List patches with --verbose.
	(CygbuildPatchFileQuilt): Search only under
	$CYGBUILD_DIR_CYGPATCH_RELATIVE
	(CygbuildPatchFileList): Search only under
	$CYGBUILD_DIR_CYGPATCH_RELATIVE
	(CygbuildCmdInstallList): Add ln command support to install.lst.

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckBinFiles): Do not
	check */doc/* directories.
	(CygbuildCmdInstallCheckBinFiles): Ignore Perl *.pm modules.

2012-09-21 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/cygwin-announce.mail.ex (License): Use (at) sign.

	* bin/cygbuild.sh.devel (CygbuildPatchFileList): Replace complex
	find command with simple *.patch search under
	$CYGBUILD_DIR_CYGPATCH_RELATIVE
	(CygbuildDefineGlobalMain): New SCRIPT_DELETE_LST_CYGFILE variable.
	(CygbuildCmdDeleteListExists): New.
	(CygbuildCmdDeletellList): New.

	* bin/cygbuild.sh (CygbuildPatchFileList): Correct
	search from *patch to *.patch.

2012-09-19 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl:
	(Help::EVERYTHING): Remove all shell prefix charcters '$'.
	(Help::Preparation commands::files): Update .tmp to .ex suffix.
	(Help::OPTIONS): Move -h, -V to the end of options. GNU standard.
	(Help::OPTIONAL EXTERNAL DIRECTORIES): Remove. The comment tag "#
	cyginstdir: " is no longer supported in scrips. Use file
	install.lst instead.

2012-02-18 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Fix call to
	CygbuildCmdDeleteListExists().
